@@ -149,7 +149,16 @@
                 <configuration>
                     <argLine>
                         --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                        --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED
+                        -Dtestfx.robot=glass
+                        -Dtestfx.headless=true
+                        -Dglass.platform=Monocle
+                        -Dmonocle.platform=Headless
+                        -Dprism.order=sw
+                        -Dprism.text=t2k
+                        -Djava.awt.headless=true
+                        -Dtestfx.setup.timeout=15000
                     </argLine>
                 </configuration>
             </plugin>
